Changed to About Me

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="right-half">
             <div class="right-side-content">
                 <div class="contentstyle">
-                    <div class="header">About Me!!!</div>
+                    <div class="header">About Me</div>
                     <p>
                         As a Computer Science student at the University of Toronto, I aim to leverage my strong problem-solving and technical skills in software development and web design.
                         I am passionate about coding and problem-solving, seeking opportunities to contribute to innovative projects within a dynamic team environment. 
