changes to projects section

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -163,26 +163,33 @@
                     </div>
                     <ul>
                         <li>
-                            Developed a Huffman Lossless Compression algorithm in Python for
-                            an advanced programming course, focusing on the efficient use of
-                            data structures and programming techniques.
+                            Efficient Algorithm Implementation: Developed a Huffman Lossless Compression algorithm in
+                            Python,
+                            emphasizing the efficient use of data structures and advanced programming techniques for
+                            optimal compression
+                            results.
+
                         </li>
                         <li>
-                            Handled file input/output operations, data encoding and
-                            decoding, maintaining data accuracy throughout the compression
+                            Effective Data Handling: Implemented the algorithm using Python’s extensive built-in
+                            functions and libraries to
+                            achieve high levels of data compression efficiency.
+
+                        </li>
+                        <li>
+                            File Management and Data Integrity: Managed comprehensive file input/output operations and
+                            maintained
+                            data encoding and decoding accuracy, ensuring data integrity throughout the compression
                             process.
                         </li>
                         <li>
-                            Managed all aspects of file I/O, data encoding/decoding, and
-                            maintained data integrity during the compression process,
-                            ensuring high reliability.
+                            Reliability Through Error Handling: Incorporated robust error handling measures to enhance
+                            the tool’s
+                            resilience and reliability.
                         </li>
                         <li>
-                            Incorporated thorough error handling to improve the program’s
-                            resilience and reliability against potential issues.
-                        </li>
-                        <li>
-                            Conducted rigorous testing to ensure the program’s capability in
+                            Rigorous Testing and Validation: Executed detailed testing protocols to ensure the tool’s
+                            effectiveness in
                             accurately decompressing files.
                         </li>
                     </ul>
@@ -191,17 +198,25 @@
                     <div class="header">Phone Company Management System | Python</div>
                     <ul>
                         <li>
-                            Developed a Python-based management system for a phone company,
-                            featuring efficient data structuring for tracking customer
+                            Strategic Data Management: Engineered a Python-based management system designed to optimize
+                            operational
+                            workflows within a telecommunications company, focusing on the effective organization and
+                            tracking of customer
                             contracts and phone lines.
                         </li>
                         <li>
-                            Created features for processing call events and advancing
-                            billing cycles, improving billing accuracy according to contract
-                            terms.
+                            Dynamic Billing and Event Processing: Designed and implemented dynamic features for
+                            real-time processing
+                            of call events and management of billing cycles, significantly enhancing billing precision
+                            aligned with customer
+                            contract terms.
                         </li>
                         <li>
-                            Implemented a GUI with filters for visual analysis of call data.
+                            Innovative User Interface Design: Developed a comprehensive Graphical User Interface (GUI)
+                            equipped with
+                            advanced filters for the in-depth visual analysis of call data, facilitating better
+                            decision-making and service
+                            improvements.
                         </li>
                     </ul>
                 </div>
