--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -133,24 +133,16 @@
                     <div class="header">Web Developer & Designer</div>
                     <ul>
                         <li>
-                            Focused on designing and developing visually appealing and
-                            functional websites.
+                            Designed and developed visually appealing, functional websites with a focus on
+                            user-friendly, responsive layouts.
                         </li>
                         <li>
-                            Emphasized custom designs for user-friendly layouts and
-                            responsive experiences.
+                            Skilled in HTML, CSS, and WordPress; adept at custom theme development and plugin
+                            integration.
+
                         </li>
                         <li>
-                            Experienced in HTML and CSS, producing structured and clean code
-                            with modern design elements for compatibility across browsers.
-                        </li>
-                        <li>
-                            Used WordPress for site development, customizing themes and
-                            integrating plugins to enhance functionality.
-                        </li>
-                        <li>
-                            Efficient in identifying and fixing technical issues to maintain
-                            optimal website performance.
+                            Troubleshot and resolved technical issues to ensure optimal website performance.
                         </li>
                     </ul>
                 </div>
