--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -218,22 +218,16 @@
                     </div>
                     <ul>
                         <li>
-                            Developed a Java-based House Price Calculator Program that
-                            efficiently analyzes and predicts house prices using large
-                            datasets.
+                            Efficient Analysis and Prediction: Crafted a Java-based House Price Calculator Program that adeptly analyzes and forecasts house prices utilizing extensive datasets, streamlining the prediction process.
                         </li>
                         <li>
-                            Implemented file reading and data extraction functionalities to
-                            seamlessly access historical house price data for accurate
-                            analysis and prediction.
+                            Seamless Data Handling: Implemented sophisticated file reading and data extraction techniques for smooth access to historical house price data, ensuring the precision of analyses and forecasts.
                         </li>
                         <li>
-                            Designed methods for calculating total house prices by year and
-                            city, providing insights into location-specific price trends.
+                            Insightful Trend Analysis: Devised algorithms for calculating house prices by year and city, offering valuable insights into regional price trends and helping users understand market dynamics.
                         </li>
                         <li>
-                            Demonstrated strong error handling and data validation skills
-                            for smooth program execution and accurate results.
+                            Robust Program Integrity: Exhibited exemplary error handling and data validation capabilities, guaranteeing the reliability and accuracy of program outputs, thus enhancing user trust and program utility
                         </li>
                     </ul>
                 </div>
