--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -218,16 +218,24 @@
                     </div>
                     <ul>
                         <li>
-                            Efficient Analysis and Prediction: Crafted a Java-based House Price Calculator Program that adeptly analyzes and forecasts house prices utilizing extensive datasets, streamlining the prediction process.
+                            Efficient Analysis and Prediction: Crafted a Java-based House Price Calculator Program that
+                            adeptly analyzes and forecasts house prices utilizing extensive datasets, streamlining the
+                            prediction process.
                         </li>
                         <li>
-                            Seamless Data Handling: Implemented sophisticated file reading and data extraction techniques for smooth access to historical house price data, ensuring the precision of analyses and forecasts.
+                            Seamless Data Handling: Implemented sophisticated file reading and data extraction
+                            techniques for smooth access to historical house price data, ensuring the precision of
+                            analyses and forecasts.
                         </li>
                         <li>
-                            Insightful Trend Analysis: Devised algorithms for calculating house prices by year and city, offering valuable insights into regional price trends and helping users understand market dynamics.
+                            Insightful Trend Analysis: Devised algorithms for calculating house prices by year and city,
+                            offering valuable insights into regional price trends and helping users understand market
+                            dynamics.
                         </li>
                         <li>
-                            Robust Program Integrity: Exhibited exemplary error handling and data validation capabilities, guaranteeing the reliability and accuracy of program outputs, thus enhancing user trust and program utility
+                            Robust Program Integrity: Exhibited exemplary error handling and data validation
+                            capabilities, guaranteeing the reliability and accuracy of program outputs, thus enhancing
+                            user trust and program utility
                         </li>
                     </ul>
                 </div>
