changes to font sizes li and p

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -110,11 +110,22 @@
                         As a Computer Science student at the University of Toronto, I aim
                         to leverage my strong problem-solving and technical skills in
                         software development and web design. I am passionate about coding
-                        and problem-solving, seeking opportunities to contribute to
-                        innovative projects within a dynamic team environment. With a
-                        strong foundation in programming knowledge and web technologies, I
-                        am eager to apply my skills in a challenging environment, where I
-                        can grow professionally and make a significant impact.
+                        and eagerly seek opportunities to contribute to innovative
+                        projects.
+                    </p>
+
+                    <p>
+                        Working within a dynamic team environment is where I thrive,
+                        applying my strong foundation in programming knowledge and web
+                        technologies. My goal is to be an active participant in projects
+                        that challenge and expand my abilities.
+                    </p>
+
+                    <p>
+                        Eager to grow professionally, I am committed to making a
+                        significant impact in a challenging environment. My dedication to
+                        continuous learning and improvement ensures that I bring value and
+                        fresh perspectives to any team.
                     </p>
                 </div>
                 <div class="sectiontitle">
@@ -131,20 +142,11 @@
                 </div>
                 <div class="contentstyle">
                     <div class="header">Web Developer & Designer</div>
-                    <ul>
-                        <li>
-                            Designed and developed visually appealing, functional websites with a focus on
-                            user-friendly, responsive layouts.
-                        </li>
-                        <li>
-                            Skilled in HTML, CSS, and WordPress; adept at custom theme development and plugin
-                            integration.
-
-                        </li>
-                        <li>
-                            Troubleshot and resolved technical issues to ensure optimal website performance.
-                        </li>
-                    </ul>
+                    <p>
+                        Skilled in HTML, CSS, and WordPress, I design and develop visually appealing, user-friendly
+                        websites with responsive layouts, specializing in custom theme development and plugin
+                        integration while ensuring optimal performance through effective troubleshooting.
+                    </p>
                 </div>
                 <div class="sectiontitle">
                     <div class="heading" id="projects">PROJECTS</div>
@@ -155,34 +157,31 @@
                     </div>
                     <ul>
                         <li>
-                            Efficient Algorithm Implementation: Developed a Huffman Lossless Compression algorithm in
-                            Python,
-                            emphasizing the efficient use of data structures and advanced programming techniques for
-                            optimal compression
-                            results.
-
+                            Efficient Algorithm Implementation: Developed a Huffman Lossless
+                            Compression algorithm in Python, emphasizing the efficient use
+                            of data structures and advanced programming techniques for
+                            optimal compression results.
                         </li>
                         <li>
-                            Effective Data Handling: Implemented the algorithm using Python’s extensive built-in
-                            functions and libraries to
-                            achieve high levels of data compression efficiency.
-
+                            Effective Data Handling: Implemented the algorithm using
+                            Python’s extensive built-in functions and libraries to achieve
+                            high levels of data compression efficiency.
                         </li>
                         <li>
-                            File Management and Data Integrity: Managed comprehensive file input/output operations and
-                            maintained
-                            data encoding and decoding accuracy, ensuring data integrity throughout the compression
-                            process.
+                            File Management and Data Integrity: Managed comprehensive file
+                            input/output operations and maintained data encoding and
+                            decoding accuracy, ensuring data integrity throughout the
+                            compression process.
                         </li>
                         <li>
-                            Reliability Through Error Handling: Incorporated robust error handling measures to enhance
-                            the tool’s
-                            resilience and reliability.
+                            Reliability Through Error Handling: Incorporated robust error
+                            handling measures to enhance the tool’s resilience and
+                            reliability.
                         </li>
                         <li>
-                            Rigorous Testing and Validation: Executed detailed testing protocols to ensure the tool’s
-                            effectiveness in
-                            accurately decompressing files.
+                            Rigorous Testing and Validation: Executed detailed testing
+                            protocols to ensure the tool’s effectiveness in accurately
+                            decompressing files.
                         </li>
                     </ul>
                 </div>
@@ -190,25 +189,22 @@
                     <div class="header">Phone Company Management System | Python</div>
                     <ul>
                         <li>
-                            Strategic Data Management: Engineered a Python-based management system designed to optimize
-                            operational
-                            workflows within a telecommunications company, focusing on the effective organization and
-                            tracking of customer
-                            contracts and phone lines.
+                            Strategic Data Management: Engineered a Python-based management
+                            system designed to optimize operational workflows within a
+                            telecommunications company, focusing on the effective
+                            organization and tracking of customer contracts and phone lines.
                         </li>
                         <li>
-                            Dynamic Billing and Event Processing: Designed and implemented dynamic features for
-                            real-time processing
-                            of call events and management of billing cycles, significantly enhancing billing precision
-                            aligned with customer
-                            contract terms.
+                            Dynamic Billing and Event Processing: Designed and implemented
+                            dynamic features for real-time processing of call events and
+                            management of billing cycles, significantly enhancing billing
+                            precision aligned with customer contract terms.
                         </li>
                         <li>
-                            Innovative User Interface Design: Developed a comprehensive Graphical User Interface (GUI)
-                            equipped with
-                            advanced filters for the in-depth visual analysis of call data, facilitating better
-                            decision-making and service
-                            improvements.
+                            Innovative User Interface Design: Developed a comprehensive
+                            Graphical User Interface (GUI) equipped with advanced filters
+                            for the in-depth visual analysis of call data, facilitating
+                            better decision-making and service improvements.
                         </li>
                     </ul>
                 </div>
@@ -218,24 +214,28 @@
                     </div>
                     <ul>
                         <li>
-                            Efficient Analysis and Prediction: Crafted a Java-based House Price Calculator Program that
-                            adeptly analyzes and forecasts house prices utilizing extensive datasets, streamlining the
+                            Efficient Analysis and Prediction: Crafted a Java-based House
+                            Price Calculator Program that adeptly analyzes and forecasts
+                            house prices utilizing extensive datasets, streamlining the
                             prediction process.
                         </li>
                         <li>
-                            Seamless Data Handling: Implemented sophisticated file reading and data extraction
-                            techniques for smooth access to historical house price data, ensuring the precision of
-                            analyses and forecasts.
+                            Seamless Data Handling: Implemented sophisticated file reading
+                            and data extraction techniques for smooth access to historical
+                            house price data, ensuring the precision of analyses and
+                            forecasts.
                         </li>
                         <li>
-                            Insightful Trend Analysis: Devised algorithms for calculating house prices by year and city,
-                            offering valuable insights into regional price trends and helping users understand market
+                            Insightful Trend Analysis: Devised algorithms for calculating
+                            house prices by year and city, offering valuable insights into
+                            regional price trends and helping users understand market
                             dynamics.
                         </li>
                         <li>
-                            Robust Program Integrity: Exhibited exemplary error handling and data validation
-                            capabilities, guaranteeing the reliability and accuracy of program outputs, thus enhancing
-                            user trust and program utility
+                            Robust Program Integrity: Exhibited exemplary error handling and
+                            data validation capabilities, guaranteeing the reliability and
+                            accuracy of program outputs, thus enhancing user trust and
+                            program utility
                         </li>
                     </ul>
                 </div>
